src/app/globals.css
@import "tailwindcss";
@import "tw-animate-css";

:root {
  color-scheme: only dark;
  --background: var(--color-neutral-950);
  --foreground: #ededed;

  --spacing-horizontal: calc(var(--spacing) * 3);

  /* 
  Default shadcn colors, usually overwritten by my own custom colors 
  such as color-dim instead of color-muted in the components themselves 
  */
  --card: oklch(0.205 0 0);
  --card-foreground: oklch(0.985 0 0);
  --popover: oklch(0.269 0 0);
  --popover-foreground: oklch(0.985 0 0);
  --primary: oklch(0.922 0 0);
  --primary-foreground: oklch(0.205 0 0);
  --secondary: oklch(0.269 0 0);
  --secondary-foreground: oklch(0.985 0 0);
  --muted: oklch(0.269 0 0);
  --muted-foreground: oklch(0.708 0 0);
  --accent: oklch(0.371 0 0);
  --accent-foreground: oklch(0.985 0 0);
  --destructive: oklch(0.704 0.191 22.216);
  /*--border: oklch(1 0 0 / 10%);*/
  --input: oklch(1 0 0 / 15%);
  --ring: oklch(0.556 0 0);
  --chart-1: oklch(0.488 0.243 264.376);
  --chart-2: oklch(0.696 0.17 162.48);
  --chart-3: oklch(0.769 0.188 70.08);
  --chart-4: oklch(0.627 0.265 303.9);
  --chart-5: oklch(0.645 0.246 16.439);
  --sidebar: oklch(0.205 0 0);
  --sidebar-foreground: oklch(0.985 0 0);
  --sidebar-primary: oklch(0.488 0.243 264.376);
  --sidebar-primary-foreground: oklch(0.985 0 0);
  --sidebar-accent: oklch(0.269 0 0);
  --sidebar-accent-foreground: oklch(0.985 0 0);
  --sidebar-border: oklch(1 0 0 / 10%);
  --sidebar-ring: oklch(0.439 0 0);
}

::selection {
  @apply bg-dim/20 text-foreground;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --color-dim: color-mix(in srgb, var(--foreground) 75%, var(--background));
  --font-sans: var(--font-reddit-sans);
  --font-mono: var(--font-reddit-mono);
  --spacing-horizontal: var(--spacing-horizontal);
  --color-dim-5: color-mix(in srgb, var(--color-dim) 5%, var(--background));
}

@utility scrollbar-hidden {
  -ms-overflow-style: none;
  scrollbar-width: none;
  &::-webkit-scrollbar {
    display: none;
  }
}

/* Remove horizontal padding on desktop */
@media (min-width: 1024px) {
  :root {
    --spacing-horizontal: 0;
  }
}

body {
  background: var(--background);
  color: var(--foreground);
  @apply font-sans text-sm;
}

